--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <section id="section1">
-      <button class="button1">100%</button>
+      <button class="button1"><a href="index2.html">100%</button>
 
     </section>
     <section id="section2"></section>
