--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,8 @@
     <title></title>
   </head>
   <body>
-  <h1>Insert Pokemon Here:</h1>
-  <input class="inputnav" type="text" placeholder="Search..">
+  <!-- <h1>Insert Pokemon Here:</h1> -->
+  <!-- <input class="inputnav" type="text" placeholder="Search.."> -->
+  <script src="main.js"></script>
   </body>
 </html>
