--- a/index2.html
+++ b/index2.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="main2.css">
     <title></title>
+    <nav>
+      <button id="btn" onclick="requestAPI()">Search For Pokemon</button>
+    </nav>
   </head>
   <body>
-  <!-- <h1>Insert Pokemon Here:</h1> -->
-  <!-- <input class="inputnav" type="text" placeholder="Search.."> -->
+    <p id="search"></p>
   <script src="main.js"></script>
   </body>
 </html>
