--- a/index2.html
+++ b/index2.html
@@ -4,12 +4,24 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="main2.css">
     <title></title>
+    <section>
     <nav>
-      <button id="btn" onclick="requestAPI()">Search For Pokemon</button>
     </nav>
+  </section>
   </head>
   <body>
-    <p id="search"></p>
+    <section>
+      <button id="btn" onclick="requestAPI()">Search For Pokemon</button>
+      <h1>Pokemon</h1>
+      <div class="">
+      <ul>
+        <li>Hp: </li>
+        <li>Defense: </li>
+        <li>Attack: </li>
+        <li>Abilities: </li>
+      </ul>
+    </div>
+    </section>
   <script src="main.js"></script>
   </body>
 </html>
