--- a/index2.html
+++ b/index2.html
@@ -3,25 +3,32 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="main2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title></title>
-    <section>
-    <nav>
-    </nav>
-  </section>
   </head>
   <body>
-    <section>
+    <!-- <div class="container small">Small</div>
+    <div class="row">
+  <div class="column">.column</div>
+</div>
+
+<div class="row">
+  <div class="column">.column</div>
+  <div class="column">.column</div>
+  <div class="column">.column</div>
+  <div class="column">.column</div>
+</div> -->
+
       <button id="btn" onclick="requestAPI()">Search For Pokemon</button>
-      <h1>Pokemon</h1>
-      <div class="">
+      <button id="btn" onclick="trainerName()">Create New Trainer</button>
+      <!-- <div1 class="skills">
       <ul>
         <li>Hp: </li>
         <li>Defense: </li>
         <li>Attack: </li>
         <li>Abilities: </li>
       </ul>
-    </div>
-    </section>
+    </div1> -->
   <script src="main.js"></script>
   </body>
 </html>
