--- a/index2.html
+++ b/index2.html
@@ -7,28 +7,11 @@
     <title></title>
   </head>
   <body>
-    <!-- <div class="container small">Small</div>
-    <div class="row">
-  <div class="column">.column</div>
-</div>
 
-<div class="row">
-  <div class="column">.column</div>
-  <div class="column">.column</div>
-  <div class="column">.column</div>
-  <div class="column">.column</div>
-</div> -->
 
       <button id="btn" onclick="requestAPI()">Search For Pokemon</button>
-      <button id="btn" onclick="trainerName()">Create New Trainer</button>
-      <!-- <div1 class="skills">
-      <ul>
-        <li>Hp: </li>
-        <li>Defense: </li>
-        <li>Attack: </li>
-        <li>Abilities: </li>
-      </ul>
-    </div1> -->
+      <!-- <button id="btn" onclick="trainerName()">Create New Trainer</button> -->
+
   <script src="main.js"></script>
   </body>
 </html>
